fix: overflow hidden for sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,30 @@ body {
         @apply bg-slate-900 max-w-[1440px] mx-auto;
 }
 
+/* Firefox */
+#sidebar {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+/* WebKit (Chrome, Safari) */
+#sidebar::-webkit-scrollbar {
+  width: 6px;
+}
+
+#sidebar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+#sidebar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+#sidebar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 p, li, button {
     @apply font-quicksand;
 }
